# ear-production-suite

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT.TXT  README.md  index.markdown  install_vcpkg_deps_windows.bat  response_file.txt  vcpkg.json
docs/: CNAME  (+6 more)
ear-production-suite/: .clang-format  .editorconfig  CMakeLists.txt
ear-production-suite-plugins/: CMakeLists.txt  README.md
ear-production-suite-plugins/lib/: CMakeLists.txt
ear-production-suite-plugins/lib/include/: auto_mode_controller.hpp  binaural_monitoring_audio_processor.hpp  binaural_monitoring_backend.hpp  direct_speakers_backend.hpp  hoa_backend.hpp  item_store.hpp  listener_orientation.hpp  log.hpp  metadata.hpp  metadata_listener.hpp  metadata_thread.hpp  monitoring_audio_processor.hpp  monitoring_backend.hpp  multichannel_convolver.hpp  object_backend.hpp  pending_store.hpp  programme_element_visitor.hpp  programme_internal_id.hpp  programme_store.hpp  programme_store_adm_populator.hpp  programme_store_adm_serializer.hpp  programme_types.hpp  proto_printers.hpp  reaper_integration.hpp  reaper_vst3_interfaces.h  restored_pending_store.hpp  routing_overlap.hpp  scene_backend.hpp  scene_gains_calculator.hpp  scene_store.hpp  speaker_setups.hpp  store_metadata.hpp  variable_block_adapter.hpp
ear-production-suite-plugins/lib/messages/: connection_commands.proto  input_item_metadata.proto  monitoring_item_metadata.proto  programme_store.proto  scene_store.proto  type_metadata.proto
ear-production-suite-plugins/lib/src/: auto_mode_controller.cpp  binaural_monitoring_audio_processor.cpp  binaural_monitoring_backend.cpp  direct_speakers_backend.cpp  hoa_backend.cpp  item_store.cpp  listener_orientation.cpp  metadata_listener.cpp  monitoring_backend.cpp  multichannel_convolver.cpp  object_backend.cpp  pending_store.cpp  programme_store.cpp  programme_store_adm_populator.cpp  programme_store_adm_serializer.cpp  programme_types.cpp  proto_printers.cpp  restored_pending_store.cpp  routing_overlap.cpp  scene_backend.cpp  scene_gains_calculator.cpp  scene_store.cpp  store_metadata.cpp
ear-production-suite-plugins/packaging/: CMakeLists.txt
ear-production-suite-plugins/plugins/: CMakeLists.txt
ear-production-suite-plugins/plugins/binaural_monitoring/: CMakeLists.txt
ear-production-suite-plugins/plugins/direct_speakers/: CMakeLists.txt
ear-production-suite-plugins/plugins/hoa/: CMakeLists.txt
ear-production-suite-plugins/plugins/monitoring/: CMakeLists.txt
ear-production-suite-plugins/plugins/object/: CMakeLists.txt
ear-production-suite-plugins/plugins/scene/: CMakeLists.txt
ear-production-suite-plugins/resources/juce/: AppConfig.h.in
ear-production-suite-plugins/test/: CMakeLists.txt  connection_id_tests.cpp  connection_manager_tests.cpp  eigen_catch2.hpp  message_coding_tests.cpp  monitoring_audio_processor_tests.cpp  nng_tests.cpp  programme_store_adm_populator_tests.cpp  programme_store_adm_serializer_tests.cpp  protobuf_tests.cpp  scene_gains_calculator_tests.cpp  variable_block_adapter_tests.cpp
ear-production-suite-plugins/test/plugin_test_tools/: input_plugin.cpp  mockup_host.hpp  mockup_input_plugin.cpp  mockup_input_plugin.hpp  mockup_monitoring.cpp  mockup_scene.cpp  mockup_scene.hpp  scene_plugin.cpp
ear-production-suite-plugins/tools/logging_server/: CMakeLists.txt  main.cpp  test_sender.cpp
ear-production-suite/cmake/: check_nng.cmake
ear-production-suite/lib/: CMakeLists.txt
ear-production-suite/lib/include/: item_store.hpp  log.hpp  monitoring_backend.hpp  object_backend.hpp  programme_store_adm_populator.hpp  scene_backend.hpp  speaker_setups.hpp
ear-production-suite/lib/messages/: common_commands.proto  common_types.proto  input_item_metadata.proto  programme_store.proto  (+2 more)
ear-production-suite/packaging/: CMakeLists.txt  DeployVST3.cmake
ear-production-suite/test/: CMakeLists.txt  eigen_catch2.hpp  message_coding_tests.cpp  monitoring_audio_processor_tests.cpp  plugin_test_tools.cmake  protobuf_tests.cpp  scene_gains_calculator_tests.cpp  test_host_runner.cpp  variable_block_adapter_tests.cpp
ear-production-suite/tools/: CMakeLists.txt
packaging/: CMakeLists.txt  EAR-Production-Suite_Session-Template.RPP  LICENSE.md  README.md  README.md.in  install_list.xml  release_process.md  release_process.txt  uninstall_list.xml
packaging/codesign/: codesign.py  example-steps.txt
reaper-adm-export-source-plugin/: .gitignore  CMakeLists.txt
reaper-adm-export-source-plugin/resources/: config.h.in
reaper-adm-export-source-plugin/src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorUtils.h  common_definition_helper.h  customised_ear_combo_box.cpp  customised_ear_combo_box.hpp  nng_wrappers.h
reaper-adm-extension/: .gitignore  CMakeLists.txt  makemocks.sh  reaper_admConfig.cmake.in
reaper-adm-extension/src/: CMakeLists.txt
reaper-adm-extension/test/: CMakeLists.txt
reaper_adm_stem_plugin/: CMakeLists.txt
reaper_adm_stem_plugin/src/: CMakeLists.txt  JuceHeader_Wrapper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  PluginProcessorUtils.cpp  PluginProcessorUtils.h  common_definition_helper.cpp
shared/version/: CMakeLists.txt  eps_version.cpp  eps_version.cpp.in  eps_version.h  eps_version_autogen_defines.h.in  gen_version.cmake  gen_version_defines.cmake
submodules/: 0001-JUCE_Allow-Windows-to-detect-UDP-port-open-fail.patch  0001-VST3-base_Add-MinSizeRel-config.patch  0001-VST3-cmake_Add-RelWithDebInfo-and-MinSizeRel-configs.patch  0001-VST3-publicsdk_TargetReduction.patch  0001-VST3_TargetReduction.patch  0001-fix-build-on-apple-m1.patch  0001-fix-objc_msgsend-for-M1-mac.patch  0002-VST3-cmake_Dont-mess-with-project-folders.patch  CMakeLists.txt  WDL-LICENSE.txt  catch_main.cpp
submodules/catch2/: catch_main.cpp
tools/project_upgrade/: CMakeLists.txt  main.cpp  test_project_upgrade.cpp  upgrade.cpp  upgrade.h
tools/setup/: AppConfig.h  CMakeLists.txt  JuceHeader.h  Main.cpp  MainComponent.cpp  MainComponent.h  WindowBody.cpp  WindowBody.h  icon.icns
(+666 files in other folders)
